Set LocationId and CoopLID to model's value

--- a/adminconsole/Views/Locations/Edit.cshtml
+++ b/adminconsole/Views/Locations/Edit.cshtml
@@ -12,8 +12,8 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="LocationId" />
-            <input type="hidden" asp-for="CoopLocationId" class="form-control" />
+            <input type="hidden" asp-for="LocationId" value="@Model.LocationId" />
+            <input type="hidden" asp-for="CoopLocationId" value ="@Model.CoopLocationId" class="form-control" />
             <div class="form-group">
                 <label asp-for="TakeCoopData" class="control-label"></label>
                 <select asp-for="TakeCoopData" asp-items="Html.GetEnumSelectList<BooleanEnum>()">
