--- a/adminconsole/Views/Locations/Create.cshtml
+++ b/adminconsole/Views/Locations/Create.cshtml
@@ -50,7 +50,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="State" class="control-label"></label>
-                <input asp-for="State" class="form-control" />
+                <select asp-for="State" asp-items="Html.GetEnumSelectList<StateEnum>()">
+                    <option selected="selected">State</option>
+                </select>
                 <span asp-validation-for="State" class="text-danger"></span>
             </div>
             <div class="form-group">
