--- a/adminconsole/wwwroot/css/site.css
+++ b/adminconsole/wwwroot/css/site.css
@@ -1,4 +1,5 @@
-﻿.fa-1x {
+﻿/*#region Navbar styling*/
+.fa-1x {
     font-size: 1.5rem;
 }
 
@@ -21,9 +22,6 @@
 .dark-teal-text {
     color: #004d40;
 }
-
-/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
   white-space: normal;
@@ -59,8 +57,10 @@ a {
     min-height: 30px;
     height: 30%;
 }
-/* Sticky footer styles
--------------------------------------------------- */
+
+/*#endregion*/
+
+/*#region Footer Styling*/
 html {
   font-size: 14px;
 }
@@ -104,3 +104,9 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/*#endregion*/
+
+/*#region Index Styling*/
+
+/*#endregion*/
